# USBfly-Inspector

./: .gitignore  .replit  Cargo.toml  LICENSE  README.md  build.rs  changelog.md  fix_traffic_view.rs  fixed_start_capture.rs  original_start_capture.rs  package-macos.sh
attached_assets/: Pasted--Translated-Report-Full-Report-Below--1745963432311.txt  Pasted--Translated-Report-Full-Report-Below--1745983966447.txt  Pasted--Translated-Report-Full-Report-Below--1746046120239.txt  Pasted--USBfly-Inspector-Technical-Implementation-Plan-Architecture-Analysis-Based-on-the-logs-and-re-1746073317338.txt  Pasted-INFO-usbfly-cynthion-connection-Device-VID-1d50-PID-615b-is-supported-INFO-usbfly-cynthio-1745965319236.txt  Pasted-Last-login-Wed-Apr-30-11-41-22-on-ttys001-Users-fuhaku-Gits-USBfly-Inspector-target-release-usbfly-1746040768551.txt  Pasted-Last-login-Wed-Apr-30-12-31-50-on-ttys001-Users-fuhaku-Gits-USBfly-Inspector-target-release-usbfly-1746041990640.txt  Pasted-Last-login-Wed-Apr-30-12-48-23-on-ttys001-Users-fuhaku-Gits-USBfly-Inspector-target-release-usbfly-1746042711636.txt  Pasted-Last-login-Wed-Apr-30-13-03-29-on-ttys001-Users-fuhaku-Gits-USBfly-Inspector-target-release-usbfly-1746045175073.txt  Pasted-Last-login-Wed-Apr-30-13-28-39-on-ttys001-Users-fuhaku-Gits-USBfly-Inspector-target-release-usbfly-1746046143162.txt  Pasted-Last-login-Wed-Apr-30-13-47-28-on-ttys001-Users-fuhaku-Gits-USBfly-Inspector-target-release-usbfly-1746049414262.txt  Pasted-Last-login-Wed-Apr-30-16-16-48-on-ttys002-Users-fuhaku-Gits-USBfly-Inspector-target-release-usbfly-1746055284250.txt  (+13 more)
src/: app.rs  main.rs
src/cynthion/: connection.rs  device_detector.rs  (+3 more)
(+19 files in other folders)
